# tutor-gpt

./: .dockerignore  .env.template  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.test  Dockerfile.web  LICENSE  Makefile  README.md  app.py  build.sh  cache.py  chain.py  components.json  discord-gateway.py  discord_gateway.py  eslint.config.mjs  fly.production.toml  fly.staging.toml  fly.toml  globals.py  middleware.ts  next.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  redis_cache.py  requirements.txt  schema.sql  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  start.sh  vitest.config.ts
.cursor/rules/: pnpm.mdc
.github/workflows/: deploy.yml  fly.yml  vercel.yml
.streamlit/: config.toml
agent/: bloom_chain.py  cache.py  chain.py  conversation.py  imediator.py  mediator.py  postgremediator.py  pyproject.toml  redis_cache.py  supabasemediator.py  utils.py
agent/agent/: cache.py  chain.py
agent/agent/prompts/: response.md  response.yaml  thought.md  user_prediction_thought.yaml  user_prediction_thought_revision.yaml  voe.yaml  voe_thought.yaml
agent/data/prompts/human/: response.yaml
agent/data/prompts/objective/examples/: response.yaml  thought.yaml
agent/data/prompts/objective/summaries/: response.yaml  thought.yaml
agent/data/prompts/objective/system/: response.yaml
agent/data/prompts/system/: response.yaml
agent/langchain_agents/: react_openai_functions_agent.py
agent/prompts/: check_voe_list.yaml  response.yaml  thought.yaml  thought_revision.yaml
agent/tools/: askquestion.py  search.py  think.py  wolframalphafull.py
api/: .env.template  dependencies.py  main.py  pyproject.toml  schemas.py  security.py
api/routers/: chat.py  conversation.py  messages.py
api/utils/: retry_utils.py
app/: Chat.tsx  globals.css  layout.tsx  page.tsx  providers.tsx  types.ts
app/actions/: conversations.ts  messages.ts
app/api/chat/: route.ts
app/api/share/: route.ts
app/api/webhook/: route.ts
app/auth/: actions.ts
app/auth/callback/: route.ts
app/auth/confirm/: route.ts
app/auth/reset/: page.tsx
app/settings/: SettingsLayout.tsx  page.tsx
app/share/[shareId]/: page.tsx
app/testing/: page.tsx
bot/: .env.template  app.py  context.py  core.py  examples.py  pyproject.toml
common/: __init__.py
components/: FileUpload.tsx  MessageList.tsx  ThinkBox.tsx  bloomlogo.tsx  conversationtab.tsx  cookieConsentBanner.tsx  header.tsx  icons.tsx  markdownWrapper.tsx  messagebox.tsx  sidebar.tsx  spinner.tsx  thoughts.tsx  typing.tsx
components/auth/: forgot.tsx  google.tsx  index.ts  reset.tsx  signIn.tsx  signUp.tsx
components/chat/: ChatMessage.tsx
components/messages/: AIMessage.tsx  UserMessage.tsx
components/settings/: SecuritySettings.tsx  SettingsForm.tsx  SubscriptionSettings.tsx  SupportSettings.tsx
components/ui/: alert-dialog.tsx  button.tsx  card.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  file-upload.tsx  input.tsx  label.tsx  markdown.tsx  prompt-input.tsx  resizable.tsx  scroll-area.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
data/: contexts.csv  convos.csv  examples.py
data/prompts/: examples.yaml  original_prompt.yaml  response_examples.yaml  response_prompt.yaml  response_summary_prompt.yaml  thought_examples.yaml  thought_prompt.yaml  thought_summary_prompt.yaml
data/prompts/discuss/: response_prompt.yaml  response_summary_prompt.yaml  starter_prompt.yaml  thought_prompt.yaml  thought_summary_prompt.yaml
data/prompts/workshop/: response_examples.yaml  response_prompt.yaml  response_summary_prompt.yaml  starter_prompt.yaml  thought_examples.yaml  thought_prompt.yaml  thought_summary_prompt.yaml
docs/: ARCJET_IMPLEMENTATION.md
hooks/: autoscroll.ts  useReactions.ts  useThoughts.ts
public/: site.webmanifest
supabase/: config.toml
supabase/migrations/: 20231204202303_create_conversations_and_memory_tables.sql
supabase/templates/: confirmation.html  email_change.html  invite.html  magic_link.html  recovery.html
tests/: pdfChat.test.ts  setup.ts  test_supabase_mediator.py
tests/arcjet/: README.md  test-bot-protection.js
types/: index.ts
utils/: ai.ts  arcjet.ts  cn.ts  database.types.ts  honcho.ts  parseFiles.ts  parsePdf.ts  pdfChat.ts  swrCache.ts  types.ts
utils/ai/: conversation.ts  index.ts  prompts.ts  stream.ts  streamingXmlParser.ts  summary.ts  types.ts  validation.ts
utils/prompts/: pdf.ts  response.ts  summary.ts  thought.ts  thoughtWithPDF.ts
utils/stripe/: actions.ts
utils/supabase/: actions.ts  admin.ts  client.ts  middleware.ts  queries.ts  server.ts
www/: .env.template  .eslintrc.json  .gitignore  Dockerfile  README.md  bun.lockb  eslint.config.mjs  fly.toml  instrumentation.ts  main.py  middleware.ts  next.config.js  next.config.mjs  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts
www/.million/: store.json
www/app/: Chat.tsx  global-error.tsx  globals.css  home.tsx  layout.tsx  page.tsx  providers.tsx
www/app/[...url]/: client.tsx  error.tsx  page.tsx
www/app/[url]/: client.tsx  page.tsx
www/app/actions/: chat.ts  conversations.ts  messages.ts
www/app/auth/: actions.ts  page.tsx
www/app/captcha/: page.tsx
www/app/settings/: SettingsForm.tsx  SettingsLayout.tsx  page.tsx
www/app/subscription/: page.tsx
www/components/: Auth.tsx  MessageList.tsx  PriceCard.tsx  SettingsForm.tsx  SubscriptionManager.tsx  SupportForm.tsx  conversationtab.tsx  cookieConsentBanner.tsx  forgot.tsx  header.tsx  loading.tsx  markdownWrapper.tsx  message.tsx  messagebox.tsx  reset.tsx  sidebar.tsx  signIn.tsx  signUp.tsx  spinner.tsx  thoughts.tsx  typing.tsx
www/components/auth/: discord.tsx  forgot.tsx  google.tsx  index.ts  reset.tsx  signIn.tsx  signUp.tsx
www/components/ui/: button.tsx  (+5 more)
www/hooks/: autoscroll.ts
www/scripts/: stripeSync.mjs
www/types/: env.d.ts
www/utils/: ai.ts  api.ts  database.types.ts  fonts.ts  helpers.ts  honcho.ts  retryUtils.ts  supabase.ts  swrCache.ts  turnstile.ts  types.ts  unstableCache.ts
(+46 files in other folders)
