[tool.poetry]
name = "tutor-gpt"
version = "0.5.2"
description = "LangChain LLM application. Dynamic few-shot metaprompting for the task of tutoring."
authors = ["vintro <vince@plasticlabs.ai>", "VVoruganti <vineeth@plasticlabs.ai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.0"
py-cord = "^2.4.1"
python-dotenv = "^1.0.0"
validators = "^0.20.0"
openai = "^1.3.8"
pexpect = "^4.8.0"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sentry-sdk = {extras = ["fastapi"], version = "^1.31.0"}
honcho-ai = "0.0.8a1"
langchain-openai = "^0.0.8"
mirascope = "^0.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
