[tool.poetry]
name = "tutor-gpt"
version = "0.5.2"
description = "LangChain LLM application. Dynamic few-shot metaprompting for the task of tutoring."
authors = ["vintro <vince@plasticlabs.ai>", "VVoruganti <vineeth@plasticlabs.ai"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
py-cord = "^2.5.0"
python-dotenv = "^1.0.0"
validators = "^0.20.0"
openai = "^1.3.8"
pexpect = "^4.8.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sentry-sdk = {extras = ["fastapi"], version = "^1.31.0"}
honcho-ai = "^0.0.12"
mirascope = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
