[project]
name = "tutor-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "honcho-ai>=0.0.17",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
]

[tool.uv.sources]
agent = { workspace = true }
api = { workspace = true }
bot = { workspace = true }

[tool.uv.workspace]
members = ["agent/", "api/", "bot/"]
exclude = ["www/*"]
