[project]
name = "agent"
version = "0.6.0"
description = "The LLM Engine behind Tutor-GPT"
authors = [
    {name = "Plastic Labs", email = "hello@plasticlabs.ai"},
]
requires-python = ">=3.11"
dependencies = [
    "honcho-ai>=0.0.15",
    "openai>=1.3.8",
    "validators>=0.20.0",
    "python-dotenv>=1.0.1",
    "sentry-sdk>=2.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
