[project]
name = "agent"
version = "0.6.0"
description = "The LLM Engine behind Tutor-GPT"
authors = [
    {name = "Plastic Labs", email = "hello@plasticlabs.ai"},
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.3.8",
    "validators>=0.20.0",
    "sentry-sdk>=2.13.0",
    "python-dotenv>=1.0.1",
    "honcho-ai>=0.0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/plastic-labs/tutor-gpt"

[tool.hatch.build]
include = [
    "agent/**/*.py",
    "agent/**/*.md"
]