[project]
name = "api"
version = "0.6.0"
description = "The REST API Implementation of Tutor-GPT"
authors = [
    {name = "Plastic Labs", email = "hello@plasticlabs.ai"},
]
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.112.2",
    "sentry-sdk[fastapi]>=2.13.0",
    "honcho-ai>=0.0.14",
    "python-dotenv>=1.0.1",
    "agent",
]

[tool.uv.sources]
# agent = { path = "../agent", editable = true }
agent = {workspace=true}
honcho-ai = { git = "https://github.com/plastic-labs/honcho-python/", branch = "next" }
