[project]
name = "api"
version = "0.6.0"
description = "The REST API Implementation of Tutor-GPT"
authors = [{ name = "Plastic Labs", email = "hello@plasticlabs.ai" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.112.2",
    "sentry-sdk[fastapi]>=2.13.0",
    "agent",
    "python-dotenv>=1.0.1",
    "honcho-ai>=0.0.17",
    "supabase>=2.9.1",
]

[tool.uv.sources]
agent = {workspace=true}
