[project]
name = "bot"
version = "0.6.0"
description = "Discord Bot implementation of Tutor-GPT"
authors = [
    {name = "Plastic Labs", email = "hello@plasticlabs.ai"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "py-cord>=2.6.0",
    "sentry-sdk>=2.13.0",
    "python-dotenv>=1.0.1",
    "honcho-ai>=0.0.15",
    "agent",
]

[tool.uv.sources]
agent = { workspace=true }
